fixed some css bugs that cropped up

--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -10,6 +10,7 @@
   height: 50px;
   position: sticky;
   top: 0;
+  z-index: 1000;
 }
 
 .navbar ul {
