--- a/src/components/Photos/photos.css
+++ b/src/components/Photos/photos.css
@@ -7,7 +7,6 @@
   align-items: center;
   display: flex;
   flex-wrap: wrap;
-  height: 100vh;
   justify-content: center;
   padding: 25px;
 }
